--- a/Mr.Potatohead/Base.lproj/Main.storyboard
+++ b/Mr.Potatohead/Base.lproj/Main.storyboard
@@ -123,61 +123,61 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
-                                            <switch opaque="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wWb-Z0-sVF">
+                                            <switch opaque="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="wWb-Z0-sVF">
                                                 <rect key="frame" x="247" y="60" width="51" height="31"/>
                                                 <connections>
                                                     <action selector="SwitchOn:" destination="BYZ-38-t0r" eventType="valueChanged" id="19K-ny-T2f"/>
                                                 </connections>
                                             </switch>
-                                            <switch opaque="NO" tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zca-o5-Wwt">
+                                            <switch opaque="NO" tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="zca-o5-Wwt">
                                                 <rect key="frame" x="247" y="94" width="51" height="31"/>
                                                 <connections>
                                                     <action selector="SwitchOn:" destination="BYZ-38-t0r" eventType="valueChanged" id="5FM-Py-J26"/>
                                                 </connections>
                                             </switch>
-                                            <switch opaque="NO" tag="2" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Mlc-eh-h3v">
+                                            <switch opaque="NO" tag="2" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Mlc-eh-h3v">
                                                 <rect key="frame" x="247" y="128" width="51" height="31"/>
                                                 <connections>
                                                     <action selector="SwitchOn:" destination="BYZ-38-t0r" eventType="valueChanged" id="zQ2-YR-9da"/>
                                                 </connections>
                                             </switch>
-                                            <switch opaque="NO" tag="3" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TaN-hp-SUX">
+                                            <switch opaque="NO" tag="3" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="TaN-hp-SUX">
                                                 <rect key="frame" x="247" y="163" width="51" height="31"/>
                                                 <connections>
                                                     <action selector="SwitchOn:" destination="BYZ-38-t0r" eventType="valueChanged" id="BUR-CE-VU0"/>
                                                 </connections>
                                             </switch>
-                                            <switch opaque="NO" tag="4" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5CG-Ob-D9D">
+                                            <switch opaque="NO" tag="4" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="5CG-Ob-D9D">
                                                 <rect key="frame" x="247" y="197" width="51" height="31"/>
                                                 <connections>
                                                     <action selector="SwitchOn:" destination="BYZ-38-t0r" eventType="valueChanged" id="Lx3-J3-KLn"/>
                                                 </connections>
                                             </switch>
-                                            <switch opaque="NO" tag="5" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6cA-Gd-wfp">
+                                            <switch opaque="NO" tag="5" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="6cA-Gd-wfp">
                                                 <rect key="frame" x="304" y="61" width="51" height="31"/>
                                                 <connections>
                                                     <action selector="SwitchOn:" destination="BYZ-38-t0r" eventType="valueChanged" id="yfO-yb-wM1"/>
                                                 </connections>
                                             </switch>
-                                            <switch opaque="NO" tag="6" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="glC-TW-mpU">
+                                            <switch opaque="NO" tag="6" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="glC-TW-mpU">
                                                 <rect key="frame" x="304" y="95" width="51" height="31"/>
                                                 <connections>
                                                     <action selector="SwitchOn:" destination="BYZ-38-t0r" eventType="valueChanged" id="kvS-ME-CGg"/>
                                                 </connections>
                                             </switch>
-                                            <switch opaque="NO" tag="7" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TsC-Ah-Ad5">
+                                            <switch opaque="NO" tag="7" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="TsC-Ah-Ad5">
                                                 <rect key="frame" x="304" y="128" width="51" height="31"/>
                                                 <connections>
                                                     <action selector="SwitchOn:" destination="BYZ-38-t0r" eventType="valueChanged" id="Fnw-Vr-WO7"/>
                                                 </connections>
                                             </switch>
-                                            <switch opaque="NO" tag="8" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AeG-yf-12z">
+                                            <switch opaque="NO" tag="8" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="AeG-yf-12z">
                                                 <rect key="frame" x="304" y="163" width="51" height="31"/>
                                                 <connections>
                                                     <action selector="SwitchOn:" destination="BYZ-38-t0r" eventType="valueChanged" id="zA3-8J-9iL"/>
                                                 </connections>
                                             </switch>
-                                            <switch opaque="NO" tag="9" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hO6-vH-BzE">
+                                            <switch opaque="NO" tag="9" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="hO6-vH-BzE">
                                                 <rect key="frame" x="304" y="197" width="51" height="31"/>
                                                 <connections>
                                                     <action selector="SwitchOn:" destination="BYZ-38-t0r" eventType="valueChanged" id="Wnv-pG-YfD"/>
